# proto_RTC

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/desktop_gui/: Cargo.toml  GUI_SMOKE_CHECKLIST.md
apps/desktop_gui/src/: main.rs
apps/desktop_gui/src/backend_bridge/: commands.rs  mod.rs  runtime.rs
apps/desktop_gui/src/controller/: events.rs  mod.rs  orchestration.rs
apps/desktop_gui/src/media/: mod.rs  voice.rs
apps/desktop_gui/src/ui/: app.rs  mod.rs
apps/tools/: Cargo.toml
apps/tools/src/: main.rs
crates/client_core/: Cargo.toml
crates/client_core/src/: lib.rs  mls_session_manager.rs
crates/client_core/src/error/: mod.rs
crates/client_core/src/protocol_client/: mod.rs
crates/client_core/src/tests/: lib_tests.rs  mls_session_manager_tests.rs
crates/client_core/src/transport/: mod.rs
crates/client_core/src/types/: mod.rs
crates/livekit_integration/: Cargo.toml
crates/livekit_integration/src/: lib.rs
crates/mls/: Cargo.toml
crates/mls/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app_state.rs  config.rs  livekit.rs  main.rs  router.rs
crates/server/src/api/: mod.rs
crates/server/src/api/tests/: mod_tests.rs
crates/server/src/routes/: mod.rs
crates/server/src/tests/: config_tests.rs  livekit_tests.rs  main_tests.rs
crates/server/src/ws/: mod.rs
crates/server_api/: Cargo.toml
crates/server_api/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: domain.rs  error.rs  lib.rs  protocol.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_mls_state.sql  0003_mls_key_packages.sql  0004_message_and_file_attachment_metadata.sql  0004_message_attachments.sql  0005_pending_welcomes.sql  0006_mls_group_snapshot_v1.sql  0007_mls_group_state_identity_scope.sql  0008_device_identity_foundation.sql  0009_device_link_bundles.sql
crates/storage/src/: lib.rs
crates/storage/src/tests/: lib_tests.rs
crates/storage/tests/: lane3_integration_acceptance.rs
deploy/docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROTOCOL.md  ROADMAP.md  TASKS_BACKEND_STABILITY_AND_MLS_VALIDATION.md  TASKS_E2EE_OPENMLS_TEXT_CHANNELS.md  THREAT_MODEL.md  attachment_flow.md
docs/ci/: dependency-feature-delta.md
scripts/: launch-lan-server.ps1  launch-lan-server.sh  launch-multiuser.ps1  launch-server-and-client.ps1  multiuser.profiles.json  run-cli.ps1  run-cli.sh  run-gui.multiuser.fixed.ps1  run-gui.multiuser.ps1  run-gui.ps1  run-gui.sh  run-gui.updated.ps1  run-remote-client.ps1  run-remote-client.sh  run-server.ps1  run-server.sh  run-temp-server.final.ps1  run-temp-server.multiuser.ps1  run-temp-server.ps1  run-temp-server.sh  run-tools.ps1  run-tools.sh  test-local-stack.ps1  test-local-stack.sh
scripts/ci/: check_desktop_main_thin.py  check_tokio_full.py
src/: gpu_compute.rs  renderer.rs
src/shaders/: meshing.wgsl
