[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
client_core = { path = "../../crates/client_core" }
shared = { path = "../../crates/shared" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
