[package]
name = "desktop_gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
client_core = { path = "../../crates/client_core" }
eframe = { version = "0.28", default-features = true }
egui = "0.28"
shared = { path = "../../crates/shared" }
crossbeam-channel = "0.5"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd = "0.14"
mime_guess = "2.0"
