[package]
name = "desktop_gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
client_core = { path = "../../crates/client_core" }
eframe = { version = "0.33.3", default-features = true }
egui = "0.33.3"
shared = { path = "../../crates/shared" }
crossbeam-channel = "0.5"
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd = "0.17.2"
mime_guess = "2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
arboard = "3.4"
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0.102"
reqwest.workspace = true

[features]
default = ["image-format-extended"]
image-format-extended = ["image/gif", "image/webp", "image/bmp"]
