[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
shared = { path = "../../crates/shared" }
storage = { path = "../../crates/storage" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
