[package]
name = "client_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
mls = { path = "../mls" }
openmls_rust_crypto = "0.3"
shared = { path = "../shared" }
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
url.workspace = true
