[package]
name = "client_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
mls = { path = "../mls" }
openmls_rust_crypto = "0.3"
shared = { path = "../shared" }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-stream.workspace = true
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
url.workspace = true
thiserror.workspace = true
hkdf = "0.12"
livekit_integration = { path = "../livekit_integration" }
storage = { path = "../storage" }
sha2 = "0.10"
zeroize = "1"
x25519-dalek = "2"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
