[package]
name = "livekit_integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
shared = { path = "../shared" }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json.workspace = true
