[package]
name = "mls"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
thiserror.workspace = true
openmls = "0.6"
openmls_rust_crypto = "0.3"
openmls_traits = "0.3"
openmls_basic_credential = "0.3"
tls_codec = "0.4"

[dev-dependencies]
tokio.workspace = true
