[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
config.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
server_api = { path = "../server_api" }
shared = { path = "../shared" }
storage = { path = "../storage" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
livekit_integration = { path = "../livekit_integration" }

[dev-dependencies]
tower = "0.5"
