[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
chrono.workspace = true
config.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
storage = { path = "../storage" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
tower-http = { version = "0.6", features = ["limit"] }

[dev-dependencies]
tower = "0.5"
