[package]
name = "server_api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
livekit_integration = { path = "../livekit_integration" }
serde.workspace = true
shared = { path = "../shared" }
storage = { path = "../storage" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
