[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
shared = { path = "../shared" }
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
