[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
shared = { path = "../shared" }
mls = { path = "../mls" }
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
