[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
shared = { path = "../shared" }
mls = { path = "../mls" }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
